--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,7 @@
-# Core
-streamlit>=1.31
-pandas>=2.0
-numpy>=1.25
-scikit-learn==1.3.2
-scipy>=1.11
-
-# NLP & Text Processing
-nltk>=3.8
-regex>=2023.12.25
-
-# API Requests (Tasty mock / future live API integration)
-requests>=2.31
-
-# Optional Utils (data display, CSV handling)
-python-dateutil>=2.8
+streamlit>=1.36.0
+pandas>=2.2.2
+numpy>=1.26
+requests>=2.32.3
+openai>=1.40.0
+python-dotenv>=1.0.1
+scikit-learn>=1.5.1
